--- a/Index.HTML
+++ b/Index.HTML
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<!-- HEAD CABEZA DEL CODIGO : AQUI VAN COSAS BASICAS LOS ENLACES BOOSTRAP / JS / CSS -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +12,18 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <link rel="stylesheet" href="CSS/Style.css">
 </head>
 
 <body>
-
+    <!-- HEADER AQUI TENEMOS LA NAV BAR -->
     <header>
+        <!-- NAV BAR -->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container">
-
+                <!-- LOGO -->
                 <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="Assets/icons/RM_Icon_2.png" alt="Logo" class="logo">
                 </a>
@@ -31,26 +36,100 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#inicio">INICIO</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#nosotros">NOSOTROS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#servicios">SERVICIOS</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">NOTICIAS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTACTO</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contacto">CONTACTO</a></li>
                     </ul>
                 </div>
 
             </div>
         </nav>
+
     </header>
-
+    <!-- MAIN TODO EL CUERPO DE LA PAGINA TODAS LAS SECCIONES -->
     <main>
-
+        <!-- SECCION INICIO  -->
         <section class="hero" id="inicio">
-            <div class="hero-caption">
+            <div class="hero-caption"> <!-- CLASS HERO CAPTION -- LA FOTO DEL INICIO  -->
                 <h5>Limpiezas profesionales</h5>
                 <p>Descubre las mejores ofertas en Limpiezas de alfombras y cortinas</p>
+                <div class="text-center p-4">
+                    <button class="btn btn-xl text-uppercase btn-bootstrap-blue" id="submitButton" type="submit">
+                        Contactanos!
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- SECCION NOSOTROS  -->
+        <section class=" nosotros-section " id="nosotros">
+            <div class="container">
+
+                <div class="row align-items-center g-5 mb-5">
+
+                    <div class="col-lg-6">
+                        <span class="text-primary fw-semibold">Quienes somos?</span>
+
+                        <h2 class="fw-bold display-6 mt-2">
+                            Limpieza Profesional de Alfombras
+                        </h2>
+
+                        <p class="text-muted mt-3">
+                            Somos una empresa especializada en limpieza profunda de alfombras,
+                            tapices y cortinas. Utilizamos equipos profesionales y productos ecológicos
+                            para garantizar espacios limpios, frescos y seguros para tu familia
+                            o empresa.
+                        </p>
+
+                        <div class="row mt-4">
+                            <div class="col-6">
+                                <h3 class="fw-bold text-primary mb-0">40+</h3>
+                                <small class="text-muted">Años de experiencia</small>
+                            </div>
+
+                            <div class="col-6">
+                                <h3 class="fw-bold text-primary mb-0">5.000+</h3>
+                                <small class="text-muted">Servicios realizados</small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="about-img-wrapper">
+                            <img src="Assets/img/Cortinas.jpg" class="img-fluid"
+                                alt="Limpieza profesional de alfombras">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row align-items-center g-5">
+
+                    <div class="col-lg-6">
+                        <div class="about-img-wrapper-uno">
+                            <img src="Assets/img/Cortinas.jpg" class="img-fluid"
+                                alt="Limpieza profesional de alfombras">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 text-end">
+                        <h2 class="fw-bold display-6 mt-2">
+                            Limpieza Profesional de Alfombras
+                        </h2>
+
+                        <p class="text-muted">
+                            Somos una empresa especializada en limpieza profunda de alfombras,
+                            tapices y cortinas. Utilizamos equipos profesionales y productos ecológicos
+                            para garantizar espacios limpios, frescos y seguros para tu familia
+                            o empresa.
+                        </p>
+                    </div>
+
+                </div>
+
             </div>
         </section>
 
+        <!-- SECCION SERVICIOS  -->
         <section class="services-section" id="servicios">
             <div class="container">
                 <div class="text-center">
@@ -89,85 +168,154 @@
             </div>
         </section>
 
+        <!-- SECCION CONTACTO  -->
         <section id="contacto" class="contact-section-dark-map">
-            <div class="container py-2">
 
+            <div class="container">
 
+                <!-- TÍTULO -->
+                <div class="text-center mb-5 text-white">
+                    <h2 class="section-heading text-uppercase">CONTÁCTENOS</h2>
+                    <h3 class="section-subheading">
+                        Estamos listos para atender tus dudas y cotizaciones.
+                    </h3>
+                </div>
 
-                <form id="contactForm" class="contact-form-card-floating">
-                    <div class="row align-items-stretch p-4 p-md-5">
-                        <div class="text-center mb-5">
-                            <h2 class="section-heading text-uppercase">CONTÁCTENOS</h2>
-                            <h3 class="section-subheading text-muted">Estamos listos para atender tus dudas y
-                                cotizaciones.</h3>
-                        </div>
+                <!-- TARJETAS DE CONTACTO -->
+                <div class="row text-center mb-5 contact-cards-row">
 
-                        <div class="col-md-6">
-                            <div class="form-group mb-4">
-                                <input class="form-control form-control-white" id="name" type="text"
-                                    placeholder="Nombre" required />
-                            </div>
-                            <div class="form-group mb-4">
-                                <input class="form-control form-control-white" id="email" type="email"
-                                    placeholder="Email" required />
-                            </div>
-                            <div class="form-group mb-4">
-                                <input class="form-control form-control-white" id="phone" type="tel"
-                                    placeholder="Teléfono" required />
+                    <div class="col-md-4 mb-4">
+                        <div class="card card-contact-info">
+                            <div class="card-body">
+                                <i class="bi bi-geo-alt-fill icon-blue"></i>
+                                <h5 class="card-title mt-3">Dirección</h5>
+                                <p class="card-text mb-0">Santiago, Chile</p>
                             </div>
                         </div>
-
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-4">
-                                <textarea class="form-control form-control-white" id="message"
-                                    placeholder="Servicio requerido" style="height: 100%;" required></textarea>
-                            </div>
-                        </div>
-
                     </div>
 
-                    <div class="text-center p-4">
-                        <button class="btn btn-xl text-uppercase btn-bootstrap-blue" id="submitButton" type="submit">
+                    <div class="col-md-4 mb-4">
+                        <div class="card card-contact-info">
+                            <div class="card-body">
+                                <i class="bi bi-envelope-fill icon-blue"></i>
+                                <h5 class="card-title mt-3">Email</h5>
+                                <p class="card-text mb-0">correo@gmail.com</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 mb-4">
+                        <div class="card card-contact-info">
+                            <div class="card-body">
+                                <i class="bi bi-headset icon-blue"></i>
+                                <h5 class="card-title mt-3">Horario</h5>
+                                <p class="card-text mb-0">Lun – Sáb: 9:00 – 18:00</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- FORMULARIO -->
+                <form id="contactForm" class="contact-form-card-floating">
+
+                    <div class="text-center">
+                        <h2 class="section-heading text-uppercase">FORMULARIO</h2>
+                        <h3 class="section-subheading">
+                            Llena este formulario para que nos pongamos en contacto
+                        </h3>
+                    </div>
+
+                    <div class="row g-4 mt-4">
+                        <div class="col-md-6">
+                            <input class="form-control form-control-white mb-3" type="text" placeholder="Nombre"
+                                required>
+                            <input class="form-control form-control-white mb-3" type="email" placeholder="Email"
+                                required>
+                            <input class="form-control form-control-white mb-3" type="tel" placeholder="Teléfono"
+                                required>
+                        </div>
+
+                        <div class="col-md-6">
+                            <textarea class="form-control form-control-white h-100" placeholder="Servicio requerido"
+                                required></textarea>
+                        </div>
+                    </div>
+
+                    <div class="text-center mt-4">
+                        <button class="btn btn-xl btn-bootstrap-blue">
                             Enviar Mensaje
                         </button>
                     </div>
+
                 </form>
+
             </div>
         </section>
     </main>
-    <footer class="container-fluid p-5 footer">
-        <div class="row text-white">
-            <div class="col-md-4 text-center mb-3">
+
+    <!-- SECCION DEL FOOTER AQUI EL FINAL DE LA PAGINA ENLACES CONTACTO LOGO DERECHOS RESERVADOS -->
+    <footer class="footer py-5">
+        <div class="container-fluid">
+            <div class="footer-inner mx-auto">
+
+                <!-- ROW OBLIGATORIO -->
+                <div class="row justify-content-between text-center text-lg-start">
+
+                    <!-- LOGO (clickeable al inicio) -->
+                    <div class="col-lg-3 mb-4 mb-lg-0">
+                        <a href="#inicio" class="d-inline-block">
+                            <img src="Assets/icons/RM_Icon_2.png" alt="Rodolfo Martineau" class="footer-logo mb-3">
+                        </a>
+                    </div>
+
+                    <!-- REDES -->
+                    <div class="col-lg-3 mb-4 mb-lg-0">
+                        <h6 class="footer-title">Síguenos</h6>
+                        <div class="d-flex gap-3 mt-3 justify-content-center justify-content-lg-start">
+                            <a href="https://www.facebook.com/profile.php?id=100063707372167" class="social-icon"
+                                aria-label="Facebook">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                            <a href="#" class="social-icon" aria-label="Instagram">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                            <a href="#" class="social-icon" aria-label="WhatsApp">
+                                <i class="bi bi-whatsapp"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- NAVEGACIÓN -->
+                    <div class="col-lg-3 mb-4 mb-lg-0">
+                        <h6 class="footer-title">Navegación</h6>
+                        <ul class="footer-links mt-3">
+                            <li><a href="#inicio">Inicio</a></li>
+                            <li><a href="#nosotros">Nosotros</a></li>
+                            <li><a href="#servicios">Servicios</a></li>
+                            <li><a href="#contacto">Contacto</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- CONTACTO -->
+                    <div class="col-lg-3">
+                        <h6 class="footer-title">Contacto</h6>
+                        <ul class="footer-contact mt-3">
+                            <li><i class="bi bi-telephone"></i> +56 9 7827 3622</li>
+                            <li><i class="bi bi-envelope"></i> rodolfonare@gmail.com</li>
+                            <li><i class="bi bi-geo-alt"></i> Santiago, Chile</li>
+                        </ul>
+                    </div>
+
+                </div>
             </div>
-            <div class="col-md-4 text-center mb-3">
-                <h4 class="text-white">Mapa del sitio</h4>
-                <hr class="text-white">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a href="#inicio" class="nav-link text-white">INICIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-white">NOSOTROS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#servicios" class="nav-link text-white">SERVICIOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-white">NOTICIAS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link text-white">CONTACTO</a>
-                    </li>
-                </ul>
+
+            <!-- FOOTER BOTTOM -->
+            <div class="footer-bottom text-center mt-5 pt-4">
+                <small>© 2025 Rodolfo Martineau · Todos los derechos reservados</small>
             </div>
-        </div>
-        <hr class="text-white">
-        <div class="row p-2 text-warning text-center">
-            <p class="mb-0 text-white">&copy; 2025 Limpieza Martineau. Todos los derechos reservados.</p>
-            <small class="text-muted">Desarrollado por Nik0ner</small>
         </div>
     </footer>
-
 
     <!-- Enlace a JavaScript de Bootstrap (Importante para el carrusel y el menú responsive) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
