Cambios de estilos y edicion de informacion en la pagina

--- a/Index.HTML
+++ b/Index.HTML
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rodolfo Martineau - Limpiezas y Mantenciones </title>
+    <title>Servicios de limpieza a domicilio en Santiago | Rodolfo Martineau </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -51,66 +51,18 @@
     <main>
         <!-- SECCION INICIO  -->
         <section id="inicio">
-            <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="10000" data-bs-pause="false">
+            <div class="hero-slide" style="background-image: url('../Assets/img/Casa_bonita.jpg');">
+                <div class="hero-caption">
+                    <h5>Limpiezas profesionales</h5>
+                    <p>Cotiza hoy la limpieza de tus alfombras y cortinas</p>
 
-                <div class="carousel-inner">
-
-                    <!-- SLIDE 1 -->
-                    <div class="carousel-item active">
-                        <div class="hero-slide" style="background-image: url('../Assets/img/Casa_bonita.jpg');">
-                            <div class="hero-caption">
-                                <h5>Limpiezas profesionales</h5>
-                                <p>Descubre las mejores ofertas en limpieza de alfombras y cortinas</p>
-                                <div class="text-center p-4">
-                                    <button class="btn btn-xl text-uppercase btn-bootstrap-blue">
-                                        Contáctanos
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- SLIDE 2 -->
-                    <div class="carousel-item">
-                        <div class="hero-slide" style="background-image: url('../Assets/img/Sillones_bonitos.jpg');">
-                            <div class="hero-caption">
-                                <h5>Limpiezas profesionales</h5>
-                                <p>Descubre las mejores ofertas en limpieza de alfombras y cortinas</p>
-                                <div class="text-center p-4">
-                                    <button class="btn btn-xl text-uppercase btn-bootstrap-blue">
-                                        Contáctanos
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- SLIDE 3 -->
-                    <div class="carousel-item">
-                        <div class="hero-slide" style="background-image: url('../Assets/img/alfombras_lavando.jpg');">
-                            <div class="hero-caption">
-                                <h5>Limpiezas profesionales</h5>
-                                <p>Descubre las mejores ofertas en limpieza de alfombras y cortinas</p>
-                                <div class="text-center p-4">
-                                    <button class="btn btn-xl text-uppercase btn-bootstrap-blue">
-                                        Contáctanos
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    <a href="https://wa.me/56978273622?text=Hola!%20Me%20gustaría%20cotizar%20la%20limpieza%20de%20mis%20alfombras"
+                        target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
+                        <button class="btn btn-xl text-uppercase btn-bootstrap-blue">
+                            Cotiza Ahora
+                        </button>
+                    </a>
                 </div>
-
-                <!-- CONTROLES -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </button>
-
-                <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </button>
-
             </div>
         </section>
         <!-- SECCION NOSOTROS  -->
@@ -135,12 +87,12 @@
 
                         <div class="row mt-4">
                             <div class="col-6">
-                                <h3 class="fw-bold text-primary mb-0">40+</h3>
+                                <h3 class="fw-bold text-primary mb-0">50+</h3>
                                 <small class="text-muted">Años de experiencia</small>
                             </div>
 
                             <div class="col-6">
-                                <h3 class="fw-bold text-primary mb-0">5.000+</h3>
+                                <h3 class="fw-bold text-primary mb-0">100.000+</h3>
                                 <small class="text-muted">Servicios realizados</small>
                             </div>
                         </div>
@@ -164,13 +116,16 @@
                     </div>
 
                     <div class="col-lg-6 text-end">
+                        <span class="text-primary fw-semibold">Nuestro compromiso</span>
                         <h2 class="fw-bold display-6 mt-2">
-                            Materiales de primera calidad
+                            Nuestra misión: calidad y cuidado profesional
                         </h2>
 
                         <p class="text-muted">
-                            Siempre pensando en el cuidado de los articulos de los clientes
-                            por eso usamos materiales y maquinas de calida
+                            Utilizamos materiales de primera calidad, productos especializados y técnicas seguras para
+                            cuidar cada fibra y superficie.
+                            Nuestro compromiso es entregar resultados visibles, prolongar la vida útil de tus artículos
+                            y brindarte total confianza en cada servicio.
                         </p>
                     </div>
 
@@ -184,7 +139,8 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">SERVICIOS</h2>
-                    <h3 class="section-subheading text-muted mb-5">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted mb-5">Servicios de limpieza y mantención a domicilio para
+                        hogares y empresas.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -192,9 +148,10 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-home fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Hogares</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
-                            quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Alfombras</h4>
+                        <p class="text-muted">Limpieza de alfombras para hogares y familias,
+                            incluyendo alfombras muro a muro y alfombras tradicionales, con
+                            atención a domicilio y resultados profesionales.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -202,17 +159,17 @@
                             <i class="fas fa-water fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Cortinas</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
-                            quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <p class="text-muted">Servicio de limpieza de cortinas a domicilio,
+                            ideal para mantener cortinas limpias y en buen estado en distintos tipos de espacios.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-couch fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Sillones</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
-                            quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Tapices </h4>
+                        <p class="text-muted">Limpieza de sillones y tapices para hogares,
+                            oficinas y empresas, con atención a domicilio y resultados profesionales.</p>
                     </div>
                 </div>
             </div>
@@ -237,9 +194,9 @@
                     <div class="col-md-4 mb-4">
                         <div class="card card-contact-info">
                             <div class="card-body">
-                                <i class="bi bi-geo-alt-fill icon-blue"></i>
-                                <h5 class="card-title mt-3">Dirección</h5>
-                                <p class="card-text mb-0">Santiago, Chile</p>
+                                <i class="bi bi-telephone icon-blue"></i>
+                                <h5 class="card-title mt-3">Fono</h5>
+                                <p class="card-text mb-0">+569 7827 3622</p>
                             </div>
                         </div>
                     </div>
@@ -249,7 +206,7 @@
                             <div class="card-body">
                                 <i class="bi bi-envelope-fill icon-blue"></i>
                                 <h5 class="card-title mt-3">Email</h5>
-                                <p class="card-text mb-0">correo@gmail.com</p>
+                                <p class="card-text mb-0">rodolfonare@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -327,10 +284,11 @@
                                 aria-label="Facebook">
                                 <i class="bi bi-facebook"></i>
                             </a>
-                            <a href="#" class="social-icon" aria-label="Instagram">
+                            <a href="https://www.instagram.com/rodolfo_martineau_limpieza_/" class="social-icon"
+                                aria-label="Instagram">
                                 <i class="bi bi-instagram"></i>
                             </a>
-                            <a href="#" class="social-icon" aria-label="WhatsApp">
+                            <a href="https://wa.me/56978273622?text=Hola!%20Me%20gustaría%20cotizar%20la%20limpieza%20de%20mis%20alfombras" class="social-icon" aria-label="WhatsApp">
                                 <i class="bi bi-whatsapp"></i>
                             </a>
                         </div>
