Final para prueba web

--- a/Index.HTML
+++ b/Index.HTML
@@ -59,7 +59,7 @@
                     <a href="https://wa.me/56978273622?text=Hola!%20Me%20gustaría%20cotizar%20la%20limpieza%20de%20mis%20alfombras"
                         target="_blank" rel="noopener noreferrer" style="text-decoration: none;">
                         <button class="btn btn-xl text-uppercase btn-bootstrap-blue">
-                            Cotiza Ahora
+                            Cotiza ahora
                         </button>
                     </a>
                 </div>
