Arreglo img casa_bonita

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
         <!-- SECCION INICIO  -->
         <section id="inicio">
-            <div class="hero-slide" style="background-image: url('../Assets/img/Casa_bonita.jpg');">
+            <div class="hero-slide" style="background-image: url('Assets/img/Casa_bonita.jpg');">
                 <div class="hero-caption">
                     <h5>Limpiezas profesionales</h5>
                     <p>Cotiza hoy la limpieza de tus alfombras y cortinas</p>
