--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Servicios de limpieza a domicilio en Santiago | Rodolfo Martineau </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,7 +51,7 @@
     <main>
         <!-- SECCION INICIO  -->
         <section id="inicio">
-            <div class="hero-slide" >
+            <div class="hero-slide">
                 <div class="hero-caption">
                     <h5>Limpiezas profesionales</h5>
                     <p>Cotiza hoy la limpieza de tus alfombras y cortinas</p>
@@ -288,7 +288,8 @@
                                 aria-label="Instagram">
                                 <i class="bi bi-instagram"></i>
                             </a>
-                            <a href="https://wa.me/56978273622?text=Hola!%20Me%20gustaría%20cotizar%20la%20limpieza%20de%20mis%20alfombras" class="social-icon" aria-label="WhatsApp">
+                            <a href="https://wa.me/56978273622?text=Hola!%20Me%20gustaría%20cotizar%20la%20limpieza%20de%20mis%20alfombras"
+                                class="social-icon" aria-label="WhatsApp">
                                 <i class="bi bi-whatsapp"></i>
                             </a>
                         </div>
